--- a/bootstrap.htm
+++ b/bootstrap.htm
@@ -32,12 +32,12 @@
 
     <!-- Full-width responsive image -->
     <div class="container-fluid px-0">
-        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80" 
+        <img src="images/bb8-background-12-R2-D2.jpg" 
              class="img-fluid w-100" alt="Nature Banner">
     </div>
     <!-- Centered circular image below the main image -->
     <div class="container text-center my-4">
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" 
+        <img src="images/Heroic Autobots.png" 
              class="rounded-circle img-fluid" style="width:120px; height:120px; object-fit:cover;" 
              alt="Profile Picture">
     </div>
@@ -88,19 +88,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Alice</td>
-                        <td>Johnson</td>
-                        <td>alice.johnson@email.com</td>
+                        <td>Josh</td>
+                        <td>Bell</td>
+                        <td>josh.bell</td>
                     </tr>
                     <tr>
-                        <td>Bob</td>
-                        <td>Smith</td>
-                        <td>bob.smith@email.com</td>
+                        <td>Richard</td>
+                        <td>Klepper</td>
+                        <td>richard.klepper@email.com</td>
                     </tr>
                     <tr>
-                        <td>Carol</td>
-                        <td>Williams</td>
-                        <td>carol.williams@email.com</td>
+                        <td>Bill</td>
+                        <td>Boone</td>
+                        <td>bill.boone@email.com</td>
                     </tr>
                 </tbody>
             </table>
